[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:phyfu/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[options.entry_points]
console_scripts =
    phyfu.fuzz = phyfu.cli.run:main
    phyfu.fuzz_mpm = phyfu.cli.run_mpm:main
    phyfu.analyze = phyfu.cli.analyze:main
